--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.js"></script>
   <script src="dist/main.js"></script>
-  <script src="index.js" defer></script>
+  <script src="src/index.js" defer></script>
 </head>
 <div>
   <body id="home">
