--- a/public/index.html
+++ b/public/index.html
@@ -217,15 +217,15 @@
       </div>
       <div class="form-group">
         <label>Date:</label>
-        <input type="text" class="form-control" v-model="event_date">
+        <input type="number" class="form-control" v-model="eventDate">
       </div>
       <div class="form-group">
         <label>Time:</label>
-        <input type="text" class="form-control" v-model="event_time">
+        <input type="text" v-model="eventTime" placeholder={{calendar_event.event_time}}>
       </div>
       <div class="form-group">
         <label>Location:</label>
-        <input type="text" class="form-control" v-model="location">
+        <input type="text" v-model="location" placeholder={{calendar_event.location}}>
       </div>
       <div class="form-group">
         <label>Home Event?</label>
