--- a/public/index.html
+++ b/public/index.html
@@ -154,7 +154,7 @@
           </div>
         </div>
         <div id='vue-app'>
-                <v-calendar :attributes='attrs'>
+                <v-calendar :attributes='attrs' :pane-width=paneWidth>
                 </v-calendar>
                 <v-date-picker :mode='mode' v-model='selectedDate' :attributes='attrs' >
                 </v-date-picker>
