added new google font

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <link rel="apple-touch-icon" sizes="72x72" href="img/ico/72.png" type="image/png">
   <link rel="apple-touch-icon" sizes="120x120" href="img/ico/120.png" type="image/png">
   <link rel="apple-touch-icon" sizes="152x152" href="img/ico/152.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700" rel="stylesheet">
   <script src="https://unpkg.com/vue/dist/vue.js"></script>
   <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.js"></script>
