--- a/public/index.html
+++ b/public/index.html
@@ -209,8 +209,6 @@
   </div>
 </template>
 
-
-
 <template id="calendar_events-new-page">
   <div class="vue-component">
     <div class="container" id=newPage>
@@ -227,7 +225,7 @@
         <input type="text" class="form-control" v-model="eventDate">
       </div>
       <div class="form-inline">
-        <label>Time</label>
+        <label>Time: </label>
         <input type="text" class="form-control" v-model="eventTime">
       </div>
       <div class="form-inline">
@@ -235,7 +233,7 @@
         <input type="text" class="form-control" v-model="location">
       </div>
       <div class="form-inline">
-        <label>Category:</label>
+        <label>Category: </label>
         <input type="integer" class="form-control" v-model="category">
       </div>
       <div class="form-inline">
@@ -307,7 +305,6 @@
   <div class="vue-component">
 
     <div class="container" id="signupPage">
-      <h1>Signup</h1>
       <ul>
         <li class="text-danger" v-for="error in errors">{{ error }}</li>
       </ul>
@@ -327,7 +324,7 @@
         <label>Password confirmation:</label>
         <input type="password" class="form-control" v-model="passwordConfirmation">
       </div>
-      <button class="btn btn-primary" v-on:click="submit()">Submit</button>
+      <button class="btn btn-primary" v-on:click="submit()">Sign Up</button>
     </div>
 
   </div>
@@ -348,7 +345,7 @@
         <label>Password:</label>
         <input type="password" class="form-control" v-model="password">
       </div>
-      <button class="btn btn-primary" v-on:click="submit()">Submit</button>
+      <button class="btn btn-primary" v-on:click="submit()">Login</button>
     </div>
 
   </div>
