--- a/public/index.html
+++ b/public/index.html
@@ -237,7 +237,7 @@
         <input type="integer" class="form-control" v-model="category">
       </div>
       <div class="form-inline">
-        <label>Home Event? T/F:</label>
+        <label>Home:</label>
         <input type="boolean" class="form-control" v-model="home">
       </div>
       <button class="btn btn-primary" v-on:click="submit()">Add Event</button>
