separated index, show view, moved forecast to show, formatted all forms

--- a/public/index.html
+++ b/public/index.html
@@ -295,7 +295,7 @@
           <label>Category: </label>
           <input type="text" class="form-control" v-model="category">
         </div>
-        <button class="btn btn-primary" v-on:click="submit()">Submit</button>
+        <button class="btn btn-primary" v-on:click="submit()">Update</button>
       </div>
   
   </div>
